--- a/lang/de_CH.po
+++ b/lang/de_CH.po
@@ -3,9 +3,9 @@ msgstr ""
 "Project-Id-Version: Enfold v3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-17 16:40+0000\n"
-"PO-Revision-Date: 2024-04-03 09:20+0000\n"
-"Last-Translator: test Adminuser\n"
-"Language-Team: German (Switzerland)\n"
+"PO-Revision-Date: 2024-04-24 11:43+0000\n"
+"Last-Translator: \n"
+"Language-Team: Deutsch (Schweiz)\n"
 "Language: de_CH\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +19,7 @@ msgstr ""
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,1513,-1,-1\n"
 "X-Textdomain-Support: yes\n"
 "X-Poedit-SearchPath-0: .\n"
-"X-Loco-Version: 2.6.4; wp-6.2.2"
+"X-Loco-Version: 2.6.7; wp-6.5.2"
 
 #: config-templatebuilder/avia-template-builder/php/class-generic-helper.php:703
 msgid " *** Error:  Term %d missing"
@@ -12315,7 +12315,7 @@ msgstr "Fehler konnten nicht behoben werden."
 
 #: framework/php/widgets/widget-classes/class-avia-instagram.php:652
 msgid "Errors found:"
-msgstr ""
+msgstr "Fehler gefunden:"
 
 #: framework/php/inc-avia-importer.php:239
 msgid ""
@@ -13339,7 +13339,7 @@ msgstr ""
 
 #: framework/php/class-form-generator.php:257
 msgid "Found errors in the following field(s):"
-msgstr ""
+msgstr "Fehler wurden in folgenden Feld(ern) gefunden:"
 
 #: config-templatebuilder/avia-template-builder/php/class-font-manager.php:334
 msgid ""
